[I008] Correct issue with map on mobile, make responsive.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -454,6 +454,21 @@ a.contact-phone {
   color: black;
 }
 
+div#flex-map {
+  height: 0;
+  padding-top: 30px;
+  padding-bottom: 56.25%;
+  margin-bottom: 50px;
+  
+  overflow: hidden;
+  text-align: center;
+}
+
+div#flex-map iframe {
+  width: 80%;
+  height: 100%;
+}
+
 /*******************/
 /* Page: THANK YOU */
 /*******************/
